[package]
name = "vl53l4cd-embedded"
description = "embedded-hal-async driver for the VL53L4CD ToF ranging sensor"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/khari05/vl53l4cd-embedded"

[dependencies]
embedded-hal-async = "1.0.0-rc.1"
i2cdev = { version = "0.5.1", optional = true }
tokio = { version = "1.20.0", features = ["time"], optional = true }
tracing = { version = "0.1.35", optional = true, default-features = false, features = ["attributes"] }

[dev-dependencies]
anyhow = "1.0.65"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"

[features]
std = ["tracing/std"]
default = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
